backend/ingress-ip-prefix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-coolcorners
  namespace: app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - coolcorners.org
      secretName: coolcorners-app-tls
  rules:
    - host: coolcorners.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
